--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,9 @@
-
+@font-face {
+  font-family: 'MyFont';
+  src: url('/fonts/Barriecito-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,6 +17,7 @@
     height: 100vh;
     width: 100vw;
 }
+
 
 /* Footer Specific Styles */
 footer {
